--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: DockerfileFrontendAJG
+      dockerfile: DockerfilleServicioAJG
     ports:
       - "3000:3000"
     volumes:
@@ -20,7 +20,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: DockerfileBackendAJG
+      dockerfile: DockerfilleServicioAJG
     ports:
       - "8000:8000"
     volumes:
@@ -41,9 +41,9 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: myapp
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: AJG_BD 
+      MYSQL_USER: alumnoDAW 
+      MYSQL_PASSWORD: passAJG
     volumes:
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
       - database_data:/var/lib/mysql
@@ -66,7 +66,7 @@ services:
   web:
     build:
       context: ./web
-      dockerfile: DockerfileWebAJG
+      dockerfile: DockerfilleServicioAJG
     ports:
       - "80:80"
     depends_on:
